--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
+    "@prisma/client": "^4.8.0",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "git": "^0.1.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "12.1.4",
+    "nvm": "^0.0.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-big-calendar": "^1.5.2",
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.41.2",
+    "sqlite3": "^5.1.4",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.3.4",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
