--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.8.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
+    "axios": "^1.3.4",
+    "framer-motion": "^10.2.4",
     "git": "^0.1.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "12.1.4",
     "nvm": "^0.0.4",
+    "qbittorrent-api-client": "^0.4.0",
+    "qbittorrent-api-v2": "^1.2.2",
     "react": "18.0.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "18.0.0",
