--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nvm": "^0.0.4",
     "qbittorrent-api-client": "^0.4.0",
     "qbittorrent-api-v2": "^1.2.2",
+    "qs": "^6.11.1",
+    "querystring": "^0.2.1",
     "react": "18.0.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "18.0.0",
