--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "framer-motion": "^10.2.4",
     "git": "^0.1.5",
     "lodash": "^4.17.21",
@@ -29,6 +30,7 @@
     "querystring": "^0.2.1",
     "react": "18.0.0",
     "react-big-calendar": "^1.5.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.41.2",
     "sqlite3": "^5.1.4",
