--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "18.0.0",
     "react-big-calendar": "^1.5.2",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.41.2",
     "sqlite3": "^5.1.4",
