--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.41.2",
+    "react-icons": "^4.8.0",
     "sqlite3": "^5.1.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "webmidi": "^3.1.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
