--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/react": "^18.0.26",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.2.4",
     "git": "^0.1.5",
+    "googleapis": "^114.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "next": "12.1.4",
+    "next": "^12.1.4",
     "nvm": "^0.0.4",
     "qbittorrent-api-client": "^0.4.0",
     "qbittorrent-api-v2": "^1.2.2",
