--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.2.4",
     "git": "^0.1.5",
     "googleapis": "^114.0.0",
@@ -26,6 +27,7 @@
     "moment": "^2.29.4",
     "next": "^12.1.4",
     "nvm": "^0.0.4",
+    "opensheetmusicdisplay": "^1.7.5",
     "qbittorrent-api-client": "^0.4.0",
     "qbittorrent-api-v2": "^1.2.2",
     "qs": "^6.11.1",
@@ -40,6 +42,7 @@
     "react-icons": "^4.8.0",
     "sqlite3": "^5.1.4",
     "typescript": "^4.9.4",
+    "vexflow": "^4.0.1-alpha.2",
     "webmidi": "^3.1.5"
   },
   "devDependencies": {
