--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^4.8.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
