--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://k2600x:!pg3,14159265@@localhost:5432/mydb?expenses=public"
+OPENAI_API_KEY=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
