--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@prisma/client": "^4.8.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
-    "axios": "^1.3.4",
+    "axios": "^1.3.6",
     "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
@@ -29,7 +29,10 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^12.1.4",
+    "nextjs-openai": "^6.0.2",
     "nvm": "^0.0.4",
+    "openai": "^3.2.1",
+    "openai-streams": "^5.1.0",
     "opensheetmusicdisplay": "^1.7.5",
     "qbittorrent-api-client": "^0.4.0",
     "qbittorrent-api-v2": "^1.2.2",
