gmail integration / pdf2json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint"
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.26",
     "axios": "^1.3.6",
     "chart.js": "^4.2.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.2.4",
@@ -34,8 +35,12 @@
     "openai": "^3.2.1",
     "openai-streams": "^5.1.0",
     "opensheetmusicdisplay": "^1.7.5",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^2.0.2",
+    "pdfjs-dist": "^3.6.172",
     "qbittorrent-api-client": "^0.4.0",
     "qbittorrent-api-v2": "^1.2.2",
+    "qpdf": "^0.1.0-prealpha.1",
     "qs": "^6.11.1",
     "querystring": "^0.2.1",
     "react": "18.0.0",
