--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^12.1.4",
+    "next-auth": "^4.22.1",
     "nextjs-openai": "^6.0.2",
     "nvm": "^0.0.4",
     "openai": "^3.2.1",
