fixed envs/ build

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
-PROD_URL=
-LOCAL_URL=
-USER_EMAIL=
+CMS_API_URL=
 GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
 GMAIL_REDIRECT_URI=
 GMAIL_REFRESH_TOKEN=
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
