--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -22,6 +25,7 @@
     "axios": "^1.3.6",
     "chart.js": "^4.2.1",
     "cross-env": "^7.0.3",
+    "dnd-kit": "^0.0.0",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.2.4",
