--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.41.2",
     "react-icons": "^4.8.0",
+    "react-spring": "^9.7.2",
     "sqlite3": "^5.1.4",
     "typescript": "^4.9.4",
     "vexflow": "^4.0.1-alpha.2",
