--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "qs": "^6.11.1",
     "querystring": "^0.2.1",
     "react": "18.0.0",
+    "react-best-gradient-color-picker": "^2.2.23",
     "react-big-calendar": "^1.5.2",
     "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
