--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "nvm": "^0.0.4",
     "openai": "^3.2.1",
     "openai-streams": "^5.1.0",
-    "opensheetmusicdisplay": "^1.7.5",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^2.0.2",
     "pdfjs-dist": "^3.6.172",
@@ -52,16 +51,12 @@
     "react-best-gradient-color-picker": "^2.2.23",
     "react-big-calendar": "^1.5.2",
     "react-chartjs-2": "^5.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.41.2",
     "react-icons": "^4.8.0",
     "react-spring": "^9.7.2",
     "sqlite3": "^5.1.4",
-    "typescript": "^4.9.4",
-    "vexflow": "^4.0.1-alpha.2",
-    "webmidi": "^3.1.5"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
