--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-big-calendar": "^1.5.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.0.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.41.2",
     "react-icons": "^4.8.0",
     "react-spring": "^9.7.2",
