--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@prisma/client": "^4.8.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
-    "axios": "^1.3.6",
+    "axios": "^1.6.2",
     "chart.js": "^4.2.1",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
@@ -36,6 +36,7 @@
     "googleapis": "^114.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "next": "^12.1.4",
     "next-auth": "^4.22.1",
     "nextjs-openai": "^6.0.2",
