--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dnd-kit": "^0.0.0",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
+    "form-data": "^4.0.0",
     "framer-motion": "^10.16.4",
     "git": "^0.1.5",
     "googleapis": "^114.0.0",
