check gmail with imap and app password

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "concurrently \"node cron.js\" \"next start -p 3001\"",
     "lint": "next lint",
     "cron": "node cron.js"
   },
@@ -35,13 +35,16 @@
     "framer-motion": "^10.16.4",
     "git": "^0.1.5",
     "googleapis": "^114.0.0",
+    "imap": "^0.8.19",
     "lodash": "^4.17.21",
+    "mailparser": "^3.6.5",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "next": "^12.1.4",
     "next-auth": "^4.22.1",
     "nextjs-openai": "^6.0.2",
     "node-cron": "^3.0.2",
+    "node-imap": "^0.9.6",
     "nvm": "^0.0.4",
     "openai": "^3.2.1",
     "openai-streams": "^5.1.0",
