--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,12 @@
 CMS_API_URL=
 PAYLOAD_ADMIN_API_KEY=
 UI_API_KEY=
+API_URL=
 GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
 GMAIL_REDIRECT_URI=
 GMAIL_REFRESH_TOKEN=
+GMAIL_APP_PASSWORD=
+GMAIL_USER=
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
