--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^7.5.1",
+    "@mantine/dates": "^7.5.1",
+    "@mantine/hooks": "^7.5.1",
     "@prisma/client": "^4.8.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
@@ -29,8 +32,10 @@
     "chatgpt": "^5.2.5",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "dnd-kit": "^0.0.0",
     "dotenv": "^16.0.3",
+    "embla-carousel-react": "^7.1.0",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "framer-motion": "^10.16.4",
@@ -57,7 +62,7 @@
     "qpdf": "^0.1.0-prealpha.1",
     "qs": "^6.11.1",
     "querystring": "^0.2.1",
-    "react": "18.0.0",
+    "react": "^18.0.0",
     "react-best-gradient-color-picker": "^2.2.23",
     "react-big-calendar": "^1.5.2",
     "react-chartjs-2": "^5.2.0",
@@ -66,6 +71,7 @@
     "react-hook-form": "^7.41.2",
     "react-icons": "^4.8.0",
     "react-spring": "^9.7.2",
+    "react-table": "^7.8.0",
     "sqlite3": "^5.1.4",
     "typescript": "^4.9.4"
   },
@@ -73,7 +79,9 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.12.0",
     "eslint-config-next": "^12.3.4",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
