--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-best-gradient-color-picker": "^2.2.23",
     "react-big-calendar": "^1.5.2",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.0.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.41.2",
     "react-icons": "^4.8.0",
