--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "eslint-config-next": "^12.3.4",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.3.3"
+    "postcss-simple-vars": "^7.0.1"
   }
 }
