--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "export": "next export"
   },
   "dependencies": {
-    "@mantine/core": "^7.5.1",
-    "@mantine/dates": "^7.5.1",
-    "@mantine/hooks": "^7.5.1",
+    "@emotion/react": "^11.14.0",
+    "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
+    "@mantine/notifications": "^7.16.3",
     "@tabler/icons-react": "^2.47.0",
+    "@tanstack/react-query": "^5.66.9",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "axios": "^1.6.2",
@@ -23,29 +26,34 @@
     "date-fns": "^3.4.0",
     "dotenv": "^16.0.3",
     "embla-carousel-react": "^7.1.0",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "git": "^0.1.5",
     "googleapis": "^114.0.0",
-    "imap": "^0.8.19",
+    "imap": "^0.8.17",
     "lodash": "^4.17.21",
     "mailparser": "^3.6.5",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "next": "^12.1.4",
+    "next": "^15.1.7",
     "next-auth": "^4.22.1",
     "nextjs-openai": "^6.0.2",
     "node-cron": "^3.0.2",
     "node-imap": "^0.9.6",
     "nvm": "^0.0.4",
-    "openai": "^3.2.1",
+    "openai": "^4.84.0",
     "openai-streams": "^5.1.0",
+    "pdf-parse": "^1.1.1",
     "pdf2json": "^2.0.2",
+    "pdfjs-dist": "^2.16.105",
     "qs": "^6.11.1",
     "querystring": "^0.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "tone": "^15.0.4",
+    "typescript": "^5.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
