--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-CMS_API_URL=
+NEXT_PUBLIC_CMS_API_URL=
 PAYLOAD_ADMIN_API_KEY=
 UI_API_KEY=
 API_URL=
@@ -10,3 +10,6 @@ GMAIL_APP_PASSWORD=
 GMAIL_USER=
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
+NEXT_PUBLIC_STRAPI_URL=
+STRAPI_USER=
+STRAPI_PASSWORD=
